Added button for removing game instance

--- a/server/server/templates/menu.html
+++ b/server/server/templates/menu.html
@@ -27,6 +27,7 @@
             <a onclick="console.log('Clicked')">
                 <img src="{{ simulator.aerial_view }}" alt="Simulation aerial view">
             </a>
+            <button onclick="console.log('Removing ' + str(simulator))">Remove instance</button>
         </div>
     {% endfor %}
 
