--- a/server/server/templates/menu.html
+++ b/server/server/templates/menu.html
@@ -6,6 +6,7 @@
 
     <style>
         .simulation {
+            border: 1px solid black;
             display: inline-block;
             margin: 1em;
         }
@@ -14,7 +15,12 @@
             width: 7em;
         }
         .menu {
+            margin-right: 2%;
+            float: right;
             margin-top: 3em;
+            display: block;
+        }
+        .new-vehicle {
             display: block;
         }
     </style>
@@ -23,7 +29,8 @@
             const url = "/api/delete/" + id;
 
             sendRequest(url);
-            window.location.reload();
+
+            window.setTimeout(function () {window.location.reload();}, 1000);
         }
 
         function generateMap() {
@@ -32,7 +39,8 @@
             const body = {"seed" : seed};
 
             sendRequestWithBody(url, body);
-            window.location.reload();
+
+            window.setTimeout(function () {window.location.reload();}, 1000);
         }
 
         function createNewVehicle(mapId) {
@@ -82,25 +90,31 @@
             <a href="http://localhost:5000/simulations/{{ simulator.id }}/0">
                 <img src="{{ simulator.aerial_view }}" alt="Simulation aerial view">
             </a>
-            <button onclick="removeMap({{ simulator.id }})">Remove instance</button>
+            <button onclick="removeMap({{ simulator.id }})" style="float: right; margin-right: 2%">Remove instance</button>
             <div class="new-vehicle">
                 <p>New vehicle parameters:</p>
-                <label>Max Steering</label>
+                <label>Max Steering: </label>
                 <input type="text" id="max-steer">
-                <label>Max engine power</label>
+                </br>
+                <label>Max engine power: </label>
                 <input type="text" id="max-engine">
-                <label>Starting position X</label>
+                </br>
+                <label>Starting position X: </label>
                 <input type="text" id="pos-x">
-                <label>Starting position Y</label>
+                </br>
+                <label>Starting position Y: </label>
                 <input type="text" id="pos-y">
+                </br>
                 <button onclick="createNewVehicle({{ simulator.id }})">Create vehicle</button>
             </div>
         </div>
     {% endfor %}
 
-    <div>
+    </br>
+    <div class="menu">
+        <label>Map seed: </label>
         <input type="text" id="seed">
-        <button class="menu" onclick="generateMap()">Create new simulation</button>
+        <button onclick="generateMap()">Create new simulation</button>
     </div>
 
 </body>
