--- a/server/server/templates/simulation.html
+++ b/server/server/templates/simulation.html
@@ -59,6 +59,7 @@
 
             addLog("Speed: " + driveSpeed);
             sendRequest(url, data, 'POST')
+            console.log(url);
         }
 
         function addLog(message) {
