--- a/server/server/templates/menu.html
+++ b/server/server/templates/menu.html
@@ -5,10 +5,14 @@
     <title>AVS - Menu</title>
 
     <style>
+        body {
+            font-family: sans-serif;
+        }
         .simulation {
             border: 1px solid black;
             display: inline-block;
             margin: 1em;
+            padding: 12px;
         }
         .simulation > a > img {
             height: 7em;
@@ -22,6 +26,18 @@
         }
         .new-vehicle {
             display: block;
+        }
+        .new-vehicle div {
+            margin: 5px 0;
+        }
+        .create-vehicle {
+            display: block;
+            margin: 20px auto 0 auto;
+        }
+        .new-vehicle-label {
+            text-align: center;
+            margin-top: 24px;
+            font-weight: bold;
         }
     </style>
     <script>
@@ -92,20 +108,24 @@
             </a>
             <button onclick="removeMap({{ simulator.id }})" style="float: right; margin-right: 2%">Remove instance</button>
             <div class="new-vehicle">
-                <p>New vehicle parameters:</p>
-                <label>Max Steering: </label>
-                <input type="text" id="max-steer">
-                </br>
-                <label>Max engine power: </label>
-                <input type="text" id="max-engine">
-                </br>
-                <label>Starting position X: </label>
-                <input type="text" id="pos-x">
-                </br>
-                <label>Starting position Y: </label>
-                <input type="text" id="pos-y">
-                </br>
-                <button onclick="createNewVehicle({{ simulator.id }})">Create vehicle</button>
+                <p class="new-vehicle-label">Create new vehicle</p>
+                <div>
+                    <label>Max Steering: </label>
+                    <input type="text" id="max-steer" value="40">
+                </div>
+                <div>
+                    <label>Max engine power: </label>
+                    <input type="text" id="max-engine" value="60">
+                </div>
+                <div>
+                    <label>Starting position X: </label>
+                    <input type="text" id="pos-x" value="0">
+                </div>
+                <div>
+                    <label>Starting position Y: </label>
+                    <input type="text" id="pos-y" value="0">
+                </div>
+                <button class="create-vehicle" onclick="createNewVehicle({{ simulator.id }})">Create vehicle</button>
             </div>
         </div>
     {% endfor %}
@@ -113,7 +133,7 @@
     </br>
     <div class="menu">
         <label>Map seed: </label>
-        <input type="text" id="seed">
+        <input type="text" id="seed" value="-1">
         <button onclick="generateMap()">Create new simulation</button>
     </div>
 
