Added image display

--- a/server/server/templates/simulation.html
+++ b/server/server/templates/simulation.html
@@ -41,7 +41,17 @@
     </style>
     <script>
         const mapId = {{ mapId }};
-        const vehicleId = {{ vehicleId }}
+        const vehicleId = {{ vehicleId }};
+
+        function fetchImage(camera_id) {
+            fetch('/api/image/' + mapId + "/" + vehicleId + "/" + camera_id)
+                .then(res => {return res.blob()})
+                .then(blob => {
+                    const imgUrl = URL.createObjectURL(blob);
+                    const img = document.getElementById("cam" + camera_id);
+                    img.src = imgUrl;
+                });
+        }
 
         function turn() {
             const turnAngle = document.getElementById("turn-angle").value;
@@ -81,15 +91,22 @@
             });
         }
 
+        function refresh() {
+            fetchImage(1);
+            fetchImage(2);
+            fetchImage(3);
+        }
+
     </script>
 </head>
 <body>
     <main>
-        <div class="camera_view">
-            {% for view in camera_views %}
-                <img src="{{ view }}" alt="Camera view">
-            {% endfor %}
+        <div class="camera_view" id="views">
+            <img src="" alt="C1 view" id="cam1">
+            <img src="" alt="C2 view" id="cam2">
+            <img src="" alt="C3 view" id="cam3">
         </div>
+        <button onclick="refresh()">Refresh images</button>
 
         <section>
             <div class="logs" id="logs">
