changed image size

--- a/server/server/templates/simulation.html
+++ b/server/server/templates/simulation.html
@@ -19,8 +19,8 @@
             display: inline-block;
         }
         .camera_view > img {
-            width: 33%;
-            height: auto;
+            width: 200px;
+            height: 200px;
         }
 
         section {
