--- a/server/server/templates/simulation.html
+++ b/server/server/templates/simulation.html
@@ -5,8 +5,34 @@
     <title>{{ title }}</title>
     <style>
         body {
-            margin: 1%;
-            font-family: sans-serif;
+            background: #1e1e1e;
+            color: #fafafa;
+            font-family: "Trebuchet MS";
+        }
+        a {
+            color: #fafafa;
+        }
+        h2 {
+            text-align: center;
+            margin-top: 40px;
+            margin-bottom: 40px;
+            letter-spacing: 0.5px;
+        }
+        input {
+            background: #252526;
+            border: 1px solid #3e3e42;
+            color: #fafafa;
+            padding: 6px;
+        }
+        button {
+            background: #252526;
+            border: 1px solid #3e3e42;
+            color: #fafafa;
+            padding: 6px 12px;  
+            cursor: pointer;
+        }
+        button:hover {
+            background: #2d2d30;
         }
 
         main {
