Changed static links, to dynamic based on chosen vehicle

--- a/server/server/templates/menu.html
+++ b/server/server/templates/menu.html
@@ -102,10 +102,14 @@
 
     {% for simulator in simulations %}
         <div class="simulation">
-        <!-- TODO: change a element last parameter from 0 to dynamic-->
-            <a href="http://localhost:5000/simulations/{{ simulator.id }}/0">
-                <img src="{{ simulator.aerial_view }}" alt="Simulation aerial view">
-            </a>
+            {% for i in vehicles[loop.index0] %}
+                <a href="http://localhost:5000/simulations/{{ simulator.id }}/{{ i.vehicle_id }}">
+                    <!-- TODO: if aerial view implemented, replace element's content to:
+                        <img src="{{ simulator.aerial_view }}" alt="Simulation aerial view">
+                    -->
+                    Vehicle {{ i.vehicle_id }}
+                </a>
+            {% endfor %}
             <button onclick="removeMap({{ simulator.id }})" style="float: right; margin-right: 2%">Remove instance</button>
             <div class="new-vehicle">
                 <p class="new-vehicle-label">Create new vehicle</p>
