Refresh button when client unavailable

--- a/server/server/templates/menu.html
+++ b/server/server/templates/menu.html
@@ -105,6 +105,7 @@
     <div class="not-available" style="display: none;">
         <p id="status-details">Unity client not connected.</p>
         <p id="status-retry">Retrying in 10 seconds...</p>
+        <a href="/simulations">Refresh</a>
     </div>
     <div class="app-container" style="display: none;">
         <h2>Currently running simulations</h2>
